samples/_failures_safe/1761190787_d79be8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b041cc8.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_0b041cc8.c:183:5: error: expected ‘,’ or ‘;’ at end of input
  183 |     for (int i = 0
      |     ^~~
./samples/SAFE/__tmp_0b041cc8.c:183:5: error: expected declaration or statement at end of input
